# projectx

./: CMakeLists.txt
CMake/Modules/: googletest.cmake
Core/: CMakeLists.txt  core.cpp  core.hpp
Core/UnitTests/: CMakeLists.txt  libCoreTest.cpp
